--- a/secciones/estadistica.html
+++ b/secciones/estadistica.html
@@ -307,19 +307,19 @@
                     </a>
                 </div>
                 <div class="col nav-item">
-                    <a class="nav-link" href="estadistica.html">
+                    <a class="nav-link active" href="estadistica.html">
                         <i class="fas fa-chart-bar"></i>
                         Estadísticas
                     </a>
                 </div>
                 <div class="col nav-item">
-                    <a class="nav-link active" href="retos.html">
+                    <a class="nav-link " href="retos.html">
                         <i class="fas fa-leaf"></i>
                         Retos
                     </a>
                 </div>
                 <div class="col nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="perfil.html">
                         <i class="fas fa-user"></i>
                         Perfil
                     </a>
