--- a/secciones/perfil.html
+++ b/secciones/perfil.html
@@ -191,30 +191,30 @@
         </div>
     </div>
 
-    <!-- Navegación Inferior -->
+     <!-- Navegación Inferior -->
     <nav class="bottom-nav">
         <div class="container">
             <div class="row py-2">
                 <div class="col nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="../index.html">
                         <i class="fas fa-home"></i>
                         Inicio
                     </a>
                 </div>
                 <div class="col nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="estadistica.html">
                         <i class="fas fa-chart-bar"></i>
                         Estadísticas
                     </a>
                 </div>
                 <div class="col nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="retos.html">
                         <i class="fas fa-leaf"></i>
                         Retos
                     </a>
                 </div>
                 <div class="col nav-item">
-                    <a class="nav-link active" href="#">
+                    <a class="nav-link active" href="perfil.html">
                         <i class="fas fa-user"></i>
                         Perfil
                     </a>
@@ -222,7 +222,6 @@
             </div>
         </div>
     </nav>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
