--- a/secciones/retos.html
+++ b/secciones/retos.html
@@ -300,7 +300,7 @@
         </div>
     </div>
 
-    <!-- Navegación Inferior -->
+      <!-- Navegación Inferior -->
     <nav class="bottom-nav">
         <div class="container">
             <div class="row py-2">
@@ -323,7 +323,7 @@
                     </a>
                 </div>
                 <div class="col nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link " href="perfil.html">
                         <i class="fas fa-user"></i>
                         Perfil
                     </a>
@@ -331,6 +331,7 @@
             </div>
         </div>
     </nav>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 </body>
