--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         <i class="fas fa-plus"></i>
     </button>
 
-    <!-- Navegación Inferior -->
+   <!-- Navegación Inferior -->
     <nav class="bottom-nav">
         <div class="container">
             <div class="row py-2">
@@ -331,7 +331,7 @@
                     </a>
                 </div>
                 <div class="col nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="secciones/perfil.html">
                         <i class="fas fa-user"></i>
                         Perfil
                     </a>
